<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="gp_card_number">4111 1111 1111 1111</string>
    <string name="gp_choose_country">Choose country</string>
    <string name="gp_country">Country</string>
    <string name="gp_country_select_title">Select a country</string>
    <string name="gp_select_option">Select option</string>
    <string name="gp_powered_by">Powered by</string>
    <string name="gp_terms">Terms</string>
    <string name="gp_privacy">Privacy</string>
    <string name="gp_cvv">CVV</string>
    <string name="gp_close">Close</string>
    <string name="gp_agreement_text">By proceeding, you agree to %1$s\'s %2$s and %3$s. %1$s is the authorized reseller and merchant of products and services in this store. %4$s</string>
    <string name="gp_payment_under_review_title">Payment under review</string>
    <string name="gp_payment_under_review_subtitle">Payment ID %1$s is being reviewed by our Risk department to protect your account from fraud.</string>
    <string name="gp_payalto_polling_title">Finish your payment</string>
    <string name="gp_payalto_polling_subtitle">Please proceed to the %1$s window to complete your purchase. Keep this page open until payment is confirmed.</string>
    <string name="gp_card_removal_title">Confirm card removal</string>
    <string name="gp_card_removal_subtitle">Are you sure you want to remove %1$s %2$s •••• %3$s? You can always add it back later.</string>
    <string name="gp_or_text">Or</string>
    <string name="gp_no_payment_methods_title">Select a different country</string>
    <string name="gp_no_payment_methods_subtitle">Payment processing isn\'t available in your current region. Choose a supported country to proceed with your transaction.</string>
    <string name="gp_continue">Continue</string>
    <string name="gp_back_to_merchant">Back to merchant</string>

    <string name="gp_alert_subtitle_security">We\'ve temporarily limited access while verifying your account for safety. Sorry for any inconvenience.</string>
    <string name="gp_alert_title_security">Security review in progress</string>

    <string name="gp_alert_subtitle_unexpected">Something went wrong on our end. Give it another try, or contact support if this keeps happening.</string>
    <string name="gp_alert_title_unexpected">Unexpected error</string>
    <string name="gp_msg_enter_a_zip_code_to_calculate">Enter a ZIP code to calculate</string>
    <string name="gp_msg_select_a_state_to_calculate">Select a state to calculate</string>
    <string name="gp_search_hint">Search...</string>
    <string name="gp_no_supported_methods_text">Payment processing isn\'t available in your current region. Choose a supported country to proceed with your transaction.</string>
</resources>
