<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:paddingTop="16dp">

        <ImageView
            android:id="@+id/ivGPAlertIconHeader"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_bottom_alert_security"/>

        <TextView
            android:id="@+id/tvGPAlertTitle"
            style="@style/GP.Typography.Heading3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingVertical="16dp"
            android:text="@string/gp_alert_title_security"
            android:textColorHint="@color/gp_text_primary" />

        <TextView
            android:id="@+id/tvGPAlertSubtitle"
            style="@style/GP.Typography.Body1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingBottom="16dp"
            android:text="@string/gp_alert_subtitle_security"
            android:textColorHint="@color/gp_text_primary" />

        <com.terminal3.gpcoreui.components.GPPrimaryButton
            android:id="@+id/btnGPAlertBackToMerchant"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/gp_back_to_merchant" />
    </LinearLayout>

</LinearLayout>
