<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:gravity="center"
    android:paddingVertical="@dimen/gp_form_inset_left">

    <!-- No Payment Methods Icon -->
    <ImageView
        android:id="@+id/gp_no_payment_methods_icon"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginBottom="24dp"
        android:src="@drawable/gp_ic_no_payment_methods" />

    <!-- Title -->
    <TextView
        android:id="@+id/gp_no_payment_methods_title"
        style="@style/GP.Typography.Heading2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:textAlignment="center"
        android:layout_marginHorizontal="@dimen/gp_form_inset_left"
        android:text="@string/gp_no_payment_methods_title" />

    <!-- Subtitle -->
    <TextView
        android:id="@+id/gp_no_payment_methods_subtitle"
        style="@style/GP.Typography.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:textAlignment="center"
        android:gravity="center"
        android:layout_marginHorizontal="@dimen/gp_form_inset_left"
        android:text="@string/gp_no_payment_methods_subtitle" />

    <!-- Country Dropdown -->
    <com.terminal3.gpcoreui.components.GPDropdown
        android:id="@+id/gp_country_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/gp_form_inset_left"
        />


    <com.terminal3.gpcoreui.components.GPDivider
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="@dimen/gp_form_inset_top" />

    <!-- Continue Button -->
    <com.terminal3.gpcoreui.components.GPPrimaryButton
        android:id="@+id/gp_continue_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/gp_form_inset_left"
        android:text="@string/gp_continue" />

</LinearLayout>