<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center_vertical|center_horizontal"
    android:orientation="vertical"
    android:paddingVertical="12dp"
    >

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gp_border_subtle"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:padding="4dp">


        <!-- "Powered by" Text -->
        <TextView
            android:id="@+id/poweredByText"
            style="@style/GP.Typography.BodyCompact1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:text="@string/gp_powered_by"
            android:textColor="@color/gp_text_primary" />

        <!-- Paymentwall Logo -->
        <ImageView
            android:id="@+id/logo"
            android:layout_width="wrap_content"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="Paymentwall logo"
            android:src="@drawable/ic_pw_logo" />

        <!-- Divider "|" -->
        <View
            android:id="@+id/divider"
            android:layout_width="1dp"
            android:layout_height="16dp"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="4dp"
            android:background="@color/gp_text_primary" />

        <!-- Terms Button -->
        <TextView
            android:id="@+id/termsButton"
            style="@style/GP.Typography.Label2"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/gp_terms"
            android:textColor="@color/gp_text_primary" />

        <!-- Privacy Button -->
        <TextView
            android:id="@+id/privacyButton"
            style="@style/GP.Typography.Label2"
            android:layout_width="48dp"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/gp_privacy"
            android:textColor="@color/gp_text_primary" />
    </LinearLayout>
</LinearLayout>
